--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    ],
    "source": [
     "# Create a list (data) as data = [1,2,3..,1000]\n",
-    "\n",
+    "data = list(range)\n",
     "# Code here \n",
     "\n"
    ]
