--- a/index.ipynb
+++ b/index.ipynb
@@ -91,21 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1000\n",
-      "1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a list (data) as data = [1,2,3..,1000]\n",
-    "data = list(range)\n",
+    "data = list(range(1001))\n",
     "# Code here \n",
     "\n"
    ]
