--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -91,26 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a list (data) as data = [1,2,3..,1000]\n",
-    "data = list(range(1, 1001))\n",
+    "data = list(range(1001))\n",
     "# Code here \n",
-    "\n",
-    "data[:3]"
+    "\n"
    ]
   },
   {
