--- a/index.ipynb
+++ b/index.ipynb
@@ -91,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "1000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
     "data = list(range(1, 1001))\n",
     "# Code here \n",
     "\n",
-    "data[:3]"
+    "data[-1]"
    ]
   },
   {
